# score

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  score.sublime-project  todo.md
score_async/: CMakeLists.txt
score_async/include/score/async/: BaseEvent.h  CallbackEvent.h  EventContext.h  NoisyEvent.h  SignalEvent.h  SignalHandlerRegistry.h  TimerEvent.h
score_async/src/: CallbackEvent.cpp  EvBase.cpp  EventContext.cpp  EventFD.cpp  SignalHandlerRegistry.cpp
score_async/src/bench/: bench_ThreadPool.cpp  kgrind_ThreadPool.cpp
score_async/src/test/: test_EventContext.cpp  test_EventFD.cpp  test_queues.cpp
score_async/src/test_integration/: test_HTimerWheel.cpp
score_async/test_unit/: test_EventContext.cpp  test_JustOnce.cpp  test_ThreadPool.cpp  test_st_futures.cpp
score_bench/: CMakeLists.txt
score_bench/include/score/bench/: bench.h
score_bench/src/: BenchResult.cpp  bench.cpp
score_bench/src/test/: test_bench.cpp
score_bench/test_unit/: test_bench.cpp
score_core/: CMakeLists.txt
score_core/include/score/: Counter.h  MoveWrapper.h  Optional.h  ScopeGuard.h  SingletonWrapper.h  Try.h  format.h  logging.h  macros.h
score_core/include/score/atomic/: AtomicPointer.h  AtomicUint128.h  IntrinsicAtomic.h
score_core/include/score/encodings/: EncodingException.h  EncodingNormalizer.h  HeapBufferHandle.h  IConvOptions.h  IConverter.h  LibCharsetDetectorHandle.h
score_core/include/score/exceptions/: PosixError.h  ScoreError.h  exceptions.h
score_core/include/score/formatters/: formatters.h
score_core/include/score/fs/: fs.h
score_core/include/score/func/: Function.h
score_core/include/score/hashing/: HashFamily.h  SimHasher.h  hash_funcs.h  util.h
score_core/include/score/io/: ByteStringPiece.h  ConstByteStringIterator.h  SocketAddr.h  UTF8Iterator.h  UTF8IteratorBase.h  string_utils.h
score_core/include/score/iter/: IFilter.h  util.h
score_core/include/score/locks/: LockError.h  SpinLock.h  Synchronized.h
score_core/include/score/macros/: core.h  debug.h  logging.h
score_core/include/score/posix/: FileDescriptor.h
score_core/include/score/prettyprint/: prettyprint.h  prettyprint_predef.h
score_core/include/score/test_support/: Noisy.h
score_core/include/score/unicode/: support.h
score_core/include/score/url/: URLComponent.h  URLError.h  URLView.h
score_core/include/score/util/: StdinBlocker.h  option_helpers.h  try_helpers.h
score_core/src/: ScopeGuard.cpp  demangle.cpp
score_core/src/encodings/: IConverter.cpp  detection.cpp
score_core/src/exceptions/: PosixError.cpp  ScoreError.cpp
score_core/src/io/: ByteStringPiece.cpp  SocketAddr.cpp  UTF8Iterator.cpp  base64.cpp  string_utils.cpp
score_core/src/locks/: PThreadSpinLock.cpp
score_core/src/posix/: FileDescriptor.cpp
score_core/src/re/: MultiMatcher.cpp
score_core/src/test/: test_SingletonWrapper.cpp  test_ThreadLocalPtr.cpp
score_core/src/test/encodings/: test_IConverter.cpp
score_core/src/test/io/: test_BytesView.cpp  test_UTF8View.cpp  test_base64.cpp
score_core/src/unicode/: UnicodeBlock.cpp
score_core/src/url/: URLView.cpp
score_core/src/url/detail/: HTTPParserURL.cpp
score_core/test_unit/: test_Optional.cpp  test_format.cpp
score_core/test_unit/io/: test_string_utils.cpp
score_core/test_unit/iter/: test_IFilter.cpp  test_util.cpp
score_core/test_unit/locks/: test_Synchronized.cpp  test_ThreadBaton.cpp
score_core/test_unit/url/: test_URLView.cpp
score_curl/: CMakeLists.txt
score_curl/include/score/curl/: Easy.h  EasyHandle.h  EventCurler.h  Multi.h  MultiError.h  MultiHandle.h
score_curl/src/: Easy.cpp  EasyError.cpp  EasyHandle.cpp  EventCurler.cpp  Multi.cpp  MultiError.cpp  MultiHandle.cpp
score_curl/test_unit/: test_EventCurler.cpp
score_extract/: CMakeLists.txt
score_extract/src/goose/: GooseContentExtractor.cpp  GooseOptions.cpp  StupidStopwordCounter.cpp  TextCleaner.cpp  util.cpp
score_extract/src/test/goose/: test_GooseContentExtractor.cpp
score_extract/test_unit/goose/: test_GooseContentExtractor.cpp
score_html/: CMakeLists.txt
score_html/include/score/html/: HTMLDoc.h  MetaTags.h  Node.h  Tag.h
score_html/src/: HTMLDoc.cpp  MetaTags.cpp  Node.cpp  Tag.cpp
score_html/src/detail/: GumboOutputWrapper.cpp  GumboVectorWrapper.cpp
score_html/src/test/: test_HTMLDoc.cpp  test_MetaTags.cpp  test_Node.cpp
score_html/test_unit/: test_MetaTags.cpp
score_memcached/: CMakeLists.txt
score_memcached/include/score/memcached/: MemcachedError.h  SyncMCClient.h
score_memcached/src/: MemcachedConfig.cpp  SyncMCClient.cpp
score_memcached/src/test/: test_MemcachedConfig.cpp
score_memcached/src/test_integration/: test_SyncMCClient.cpp
score_memcached/test_integration/: test_SyncMCClient.cpp
score_nlp/: CMakeLists.txt
score_nlp/include/score/nlp/: Language.h  NGram.h  UTF8UTextRef.h  language_detection.h
score_nlp/src/: Language.cpp  UTF8UTextRef.cpp  language_detection.cpp
score_nlp/src/stemming/: SbStemmerWrapper.cpp  StemmerManager.cpp  Utf8Stemmer.cpp
score_nlp/src/stopwords/: MultiLanguageStopwordFilter.cpp  StopwordFilter.cpp  english_stopwords.cpp  french_stopwords.cpp  german_stopwords.cpp  italian_stopwords.cpp  russian_stopwords.cpp  spanish_stopwords.cpp
score_nlp/src/test/: test_Language.cpp  test_UTF8UTextRef.cpp
score_nlp/src/test/stemming/: test_Utf8Stemmer.cpp
score_nlp/src/test/tokenize/: test_ICUWordBreakView.cpp
score_nlp/src/tokenize/: ICUBreakView.cpp  ICUWordBreakView.cpp  TokenView.cpp  predicates.cpp
score_nlp/test_unit/: test_Language.cpp  test_language_detection.cpp
score_nlp/test_unit/stemming/: test_Utf8Stemmer.cpp
score_nlp/test_unit/tokenize/: test_ICUBreakView.cpp  test_ICUTokenOffsetView.cpp  test_ICUTokenView.cpp  test_predicates.cpp
score_redis/: CMakeLists.txt
score_redis/src/: LLRedisClient.cpp  LLRedisSubscription.cpp  RedisDynamicResponse.cpp
score_redis/src/hiredis_adapter/: hiredis_adapter.cpp
score_redis/src/test_integration/: test_LLRedisClient.cpp
scratch/: CMakeLists.txt
scratch/src/: main.cpp  main_crawler.cpp
(+550 files in other folders)
